--- a/src/app/pages/sku-management/coin/index/coin-index.component.html
+++ b/src/app/pages/sku-management/coin/index/coin-index.component.html
@@ -1,3 +1,164 @@
-<p>
-  coin-index works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+  <!-- HEADER -->
+  <page-content-header [contentTitle]="'Manajemen Koin'">
+  </page-content-header>
+  <!-- / HEADER -->
+  <div class="content p-24" *ngIf="!onLoad">
+    <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column">
+      <mat-tab-group>
+        <mat-tab label="Retailer">
+          <div class="ayo-middle px-24">
+            <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
+              <h2>Daftar Retailer</h2>
+              <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+                <mat-icon>search</mat-icon>
+                <mat-form-field autoComplete="off" class="is-light tab-search">
+                  <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)">
+                </mat-form-field>
+              </div>
+            </div>
+            <form [formGroup]="formFilter" autoComplete="off">
+              <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+
+                <mat-form-field fxFlex="12%" class="is-light form-primary">
+                  <mat-select placeholder="National" formControlName="national">
+                    <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <mat-form-field fxFlex="12%" class="is-light form-primary">
+                  <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', formFilter.get('zone').value)">
+                    <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                      Zona' :
+                      item.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <mat-form-field fxFlex="12%" class="is-light form-primary">
+                  <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', formFilter.get('region').value)">
+                    <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                      Regional'
+                      :
+                      item.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <mat-form-field fxFlex="12%" class="is-light form-primary">
+                  <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', formFilter.get('area').value)">
+                    <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                      Area'
+                      :
+                      item.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <mat-form-field fxFlex="12%" class="is-light form-primary">
+                  <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', formFilter.get('salespoint').value)">
+                    <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name === 'all' ?
+                      'Semua
+                      Salespoint'
+                      :
+                      item.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <mat-form-field fxFlex="12%" class="is-light form-primary">
+                  <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', formFilter.get('district').value)">
+                    <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                      District'
+                      :
+                      item.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <mat-form-field fxFlex="12%" class="is-light form-primary">
+                  <mat-select placeholder="Territory" formControlName="territory">
+                    <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                      Territori'
+                      :
+                      item.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </form>
+          </div>
+          <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
+            [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
+            [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
+            (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]" (select)="onSelect($event)">
+
+
+            <!-- <ngx-datatable-column name="Kode Halaman" prop="kode_halaman"></ngx-datatable-column> -->
+
+            <ngx-datatable-column name="Nama" prop="name"></ngx-datatable-column>
+            <ngx-datatable-column name="Kode Agen" prop="code"></ngx-datatable-column>
+            <ngx-datatable-column name="Nomor Ponsel" prop="phone"></ngx-datatable-column>
+            <ngx-datatable-column name="Terakhir Masuk" prop="visits">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.visits.updated_at | date:'dd/MM/yyyy'}}
+              </ng-template>
+            </ngx-datatable-column>
+
+            <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
+                <div class="button-row pl-8">
+                  <button mat-icon-button color="primary">
+                    <mat-icon>history</mat-icon>
+                  </button>
+                </div>
+              </ng-template>
+            </ngx-datatable-column>
+          </ngx-datatable>
+        </mat-tab>
+        <mat-tab label="Trade Program">
+
+          <div class="ayo-middle px-24">
+            <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
+              <h2>Daftar Trade Program</h2>
+              <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+                <mat-icon>search</mat-icon>
+                <mat-form-field autoComplete="off" class="is-light tab-search">
+                  <input matInput placeholder="Cari" (keyup)="keyUpTP.next($event.target.value)">
+                </mat-form-field>
+              </div>
+            </div>
+          </div>
+          <ngx-datatable class="material" [rows]="rowsTP" [loadingIndicator]="loadingIndicatorTP" [columnMode]="'force'"
+            [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderableTP"
+            [count]="paginationTP.total" [limit]="paginationTP.per_page" [externalPaging]="true" [externalSorting]="true"
+            (page)="setPageTP($event)" (sort)="onSortTP($event)" [sorts]="[{prop: 'name', dir: 'asc'}]">
+
+
+            <!-- <ngx-datatable-column name="Kode Halaman" prop="kode_halaman"></ngx-datatable-column> -->
+
+            <ngx-datatable-column name="Nama" prop="name"></ngx-datatable-column>
+            <ngx-datatable-column name="Dana" prop="budget">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.budget | rupiahFormater}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Tanggal Mulai" prop="start_date">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.start_date | date:'dd/MM/yyyy'}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Tanggal Berakhir" prop="start_date">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.end_date | date:'dd/MM/yyyy'}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Tanggal Kadaluarsa Koin" prop="start_date">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                {{row.coin_expiry_date | date:'dd/MM/yyyy'}}
+              </ng-template>
+            </ngx-datatable-column>
+
+            <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
+                <div class="button-row pl-8">
+                  <button mat-icon-button color="primary">
+                    <mat-icon>history</mat-icon>
+                  </button>
+                </div>
+              </ng-template>
+            </ngx-datatable-column>
+          </ngx-datatable>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </div>
+</div>
