--- a/src/app/pages/dte/task-verification/index/task-verification-index.component.html
+++ b/src/app/pages/dte/task-verification/index/task-verification-index.component.html
@@ -7,154 +7,166 @@
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
         <h2 class="pl-8">List Verifikasi Misi</h2>
-        <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
-          <mat-icon>search</mat-icon>
-          <mat-form-field autoComplete="off" class="is-light tab-search">
-            <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)">
-          </mat-form-field>
-        </div>
       </div>
-      <form [formGroup]="formFilter" autoComplete="off">
-        <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
-          class="top-table p-8">
-          <mat-form-field fxFlex="16" class="orders dropdown">
-            <mat-select formControlName="filter">
-              <mat-option [value]="item.value" *ngFor="let item of statusFilter">{{item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <div fxFlex="1"></div>
-          <mat-form-field fxFlex="16" floatLabel="never" class="orders datepicker is-light">
-            <input matInput #from [matDatepicker]="dari" (focus)="dari.open()" placeholder="Dari Tanggal"
-              formControlName="start_date" (dateChange)="setMinDate(formFilter.get('start_date').value)" readonly>
-            <button mat-button *ngIf="formFilter.get('start_date').value" matSuffix mat-icon-button aria-label="Clear"
-              (click)="formFilter.get('start_date').setValue('')">
-              <mat-icon>close</mat-icon>
-            </button>
-            <mat-datepicker-toggle matSuffix [for]="dari">
-              <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
-            </mat-datepicker-toggle>
-            <mat-datepicker #dari></mat-datepicker>
-          </mat-form-field>
-          <div fxFlex="1"></div>
-          <mat-form-field fxFlex="16" floatLabel="never" class="orders datepicker is-light">
-            <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" [min]="minDate"
-              placeholder="Sampai Tanggal" formControlName="end_date" readonly>
-            <button mat-button *ngIf="formFilter.get('end_date').value" matSuffix mat-icon-button aria-label="Clear"
-              (click)="formFilter.get('end_date').setValue('')">
-              <mat-icon>close</mat-icon>
-            </button>
-            <mat-datepicker-toggle matSuffix [for]="sampai">
-              <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
-            </mat-datepicker-toggle>
-            <mat-datepicker #sampai></mat-datepicker>
-          </mat-form-field>
-          <div fxFlex="1"></div>
-          <mat-form-field fxFlex="16" class="orders dropdown">
-            <mat-select formControlName="status">
-              <mat-option [value]="item.value" *ngFor="let item of listStatuses">{{item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <div fxFlex="1"></div>
-          <div class="button-row pb-16">
-            <button mat-raised-button style="width: 150px" color="primary" (click)="updateFilter()">FILTER</button>
+      <mat-tab-group>
+        <mat-tab label="Non-TSM">
+          <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
+            <h2 class="pl-8">Verifikasi Misi Non-TSM</h2>
+            <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+              <mat-icon>search</mat-icon>
+              <mat-form-field autoComplete="off" class="is-light tab-search">
+                <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)">
+              </mat-form-field>
+            </div>
           </div>
-        </div>
-      </form>
-      <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
-        [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
-        [rowHeight]="auto" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
-        [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
-        (sort)="onSort($event)">
-
-        <ngx-datatable-column [width]="220" [sortable]="false" name="Nama Pengatur Jadwal Program" prop="nama_pengatur_jadwal_program" [flexGrow]="3">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <!-- <span class="row-name" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]"> -->
-            <span class="row">
-              {{row.nama_pengatur_jadwal_program}}
-            </span>
-          </ng-template>
-        </ngx-datatable-column>
-
-        <ngx-datatable-column [sortable]="false" name="Trade Program" prop="nama_trade_program" [flexGrow]="3">
-        </ngx-datatable-column>
-
-        <ngx-datatable-column [width]="195" [sortable]="false" name="Nama Group Trade Program" prop="nama_grup_trade_program" [flexGrow]="3">
-        </ngx-datatable-column>
-
-        <ngx-datatable-column [width]="190" [sortable]="false" name="Nama Misi/Template Tugas" prop="nama_template" [flexGrow]="3">
-        </ngx-datatable-column>
-
-        <ngx-datatable-column [width]="200" [sortable]="false" name="Periode Misi" prop="start_date" [flexGrow]="3">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span>{{row.start_date | dateToMoment}} s/d {{ row.end_date | dateToMoment}}</span>
-          </ng-template>
-        </ngx-datatable-column>
-
-        <ngx-datatable-column [sortable]="false" name="Audience Group" prop="nama_audience_group" [flexGrow]="3">
-        </ngx-datatable-column>
-
-        <ngx-datatable-column [sortable]="false" name="Verification Rate" prop="verification_rate" [flexGrow]="3">
-        </ngx-datatable-column>
-
-        <ngx-datatable-column [width]="165" [sortable]="false" name="Status" prop="status_scheduler" [flexGrow]="3">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <div class="name-container">
-              <p class="status text-truncate h6 p-4 status-order mat-green-800-bg" style="text-transform: uppercase;"
-                *ngIf="row.status_scheduler == 'publish'">
-                {{row.status_scheduler}}
-              </p>
-              <p class="status text-truncate h6 p-4 status-order mat-yellow-900-bg" style="text-transform: uppercase;"
-                *ngIf="row.status_scheduler == 'draft'">
-                {{row.status_scheduler}}
-              </p>
-              <p class="status text-truncate h6 p-4 status-order mat-red-900-bg" style="text-transform: uppercase;"
-                *ngIf="row.status_scheduler == 'unpublish'">
-                {{row.status_scheduler}}
-              </p>
+          <form [formGroup]="formFilter" autoComplete="off">
+            <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
+              class="top-table p-8">
+              <mat-form-field fxFlex="16" class="orders dropdown">
+                <mat-select formControlName="filter">
+                  <mat-option [value]="item.value" *ngFor="let item of statusFilter">{{item.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <div fxFlex="1"></div>
+              <mat-form-field fxFlex="16" floatLabel="never" class="orders datepicker is-light">
+                <input matInput #from [matDatepicker]="dari" (focus)="dari.open()" placeholder="Dari Tanggal"
+                  formControlName="start_date" (dateChange)="setMinDate(formFilter.get('start_date').value)" readonly>
+                <button mat-button *ngIf="formFilter.get('start_date').value" matSuffix mat-icon-button aria-label="Clear"
+                  (click)="formFilter.get('start_date').setValue('')">
+                  <mat-icon>close</mat-icon>
+                </button>
+                <mat-datepicker-toggle matSuffix [for]="dari">
+                  <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+                </mat-datepicker-toggle>
+                <mat-datepicker #dari></mat-datepicker>
+              </mat-form-field>
+              <div fxFlex="1"></div>
+              <mat-form-field fxFlex="16" floatLabel="never" class="orders datepicker is-light">
+                <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" [min]="minDate"
+                  placeholder="Sampai Tanggal" formControlName="end_date" readonly>
+                <button mat-button *ngIf="formFilter.get('end_date').value" matSuffix mat-icon-button aria-label="Clear"
+                  (click)="formFilter.get('end_date').setValue('')">
+                  <mat-icon>close</mat-icon>
+                </button>
+                <mat-datepicker-toggle matSuffix [for]="sampai">
+                  <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+                </mat-datepicker-toggle>
+                <mat-datepicker #sampai></mat-datepicker>
+              </mat-form-field>
+              <div fxFlex="1"></div>
+              <mat-form-field fxFlex="16" class="orders dropdown">
+                <mat-select formControlName="status">
+                  <mat-option [value]="item.value" *ngFor="let item of listStatuses">{{item.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <div fxFlex="1"></div>
+              <div class="button-row pb-16">
+                <button mat-raised-button style="width: 150px" color="primary" (click)="updateFilter()">FILTER</button>
+              </div>
             </div>
-          </ng-template>
-        </ngx-datatable-column>
+          </form>
+          <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
+            [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
+            [rowHeight]="auto" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
+            [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
+            (sort)="onSort($event)">
+    
+            <ngx-datatable-column [width]="220" [sortable]="false" name="Nama Pengatur Jadwal Program" prop="nama_pengatur_jadwal_program" [flexGrow]="3">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <!-- <span class="row-name" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]"> -->
+                <span class="row">
+                  {{row.nama_pengatur_jadwal_program}}
+                </span>
+              </ng-template>
+            </ngx-datatable-column>
+    
+            <ngx-datatable-column [sortable]="false" name="Trade Program" prop="nama_trade_program" [flexGrow]="3">
+            </ngx-datatable-column>
+    
+            <ngx-datatable-column [width]="195" [sortable]="false" name="Nama Group Trade Program" prop="nama_grup_trade_program" [flexGrow]="3">
+            </ngx-datatable-column>
+    
+            <ngx-datatable-column [width]="190" [sortable]="false" name="Nama Misi/Template Tugas" prop="nama_template" [flexGrow]="3">
+            </ngx-datatable-column>
+    
+            <ngx-datatable-column [width]="200" [sortable]="false" name="Periode Misi" prop="start_date" [flexGrow]="3">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <span>{{row.start_date | dateToMoment}} s/d {{ row.end_date | dateToMoment}}</span>
+              </ng-template>
+            </ngx-datatable-column>
+    
+            <ngx-datatable-column [sortable]="false" name="Audience Group" prop="nama_audience_group" [flexGrow]="3">
+            </ngx-datatable-column>
+    
+            <ngx-datatable-column [sortable]="false" name="Verification Rate" prop="verification_rate" [flexGrow]="3">
+            </ngx-datatable-column>
+    
+            <ngx-datatable-column [width]="165" [sortable]="false" name="Status" prop="status_scheduler" [flexGrow]="3">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <div class="name-container">
+                  <p class="status text-truncate h6 p-4 status-order mat-green-800-bg" style="text-transform: uppercase;"
+                    *ngIf="row.status_scheduler == 'publish'">
+                    {{row.status_scheduler}}
+                  </p>
+                  <p class="status text-truncate h6 p-4 status-order mat-yellow-900-bg" style="text-transform: uppercase;"
+                    *ngIf="row.status_scheduler == 'draft'">
+                    {{row.status_scheduler}}
+                  </p>
+                  <p class="status text-truncate h6 p-4 status-order mat-red-900-bg" style="text-transform: uppercase;"
+                    *ngIf="row.status_scheduler == 'unpublish'">
+                    {{row.status_scheduler}}
+                  </p>
+                </div>
+              </ng-template>
+            </ngx-datatable-column>
+    
+    
+            <ngx-datatable-column [sortable]="false" name="Status Coin" prop="status_coin" [flexGrow]="3">
+            </ngx-datatable-column>
+    
+            <ngx-datatable-column [width]="250" name="Tindakan" headerClass="textright" [sortable]="false">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <div class="button-row" style="margin-left: -10px">
+                  <button type="button" mat-icon-button color="" matTooltip="Lihat"
+                    [routerLink]="['/dte', 'taskverification', 'detail', row.id, row.scheduler_templates_id]"
+                    [disabled]="!permissionVerifikasiMisi?.lihat">
+                    <mat-icon class="secondary-text">assignment</mat-icon>
+                  </button>
+                  <button type="button" mat-icon-button color=""
+                    [routerLink]="['/dte', 'taskverification', 'edit', row.id]"
+                    [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah" matTooltip="Ubah Tanggal Penjadwalan">
+                    <mat-icon class="secondary-text">update</mat-icon>
+                  </button>
+                  <button type="button" mat-icon-button color="" [disabled]="row.status_scheduler !== 'publish'"
+                    matTooltip="Export Misi" (click)="export(row)">
+                    <mat-icon *ngIf="row.status_scheduler == 'publish'" class="orange-500-fg">save_alt</mat-icon>
+                    <mat-icon *ngIf="row.status_scheduler !== 'publish'" class="secondary-text">save_alt</mat-icon>
+                  </button>
+                  <button type="button" mat-icon-button color="" matTooltip="Verified All" (click)="openConfirmDialog(row, 'Verification All Mission')" [disabled]="isDisableVerification(row)">
+                    <mat-icon *ngIf="!isDisableVerification(row)" class="orange-500-fg">assignment_turned_in</mat-icon>
+                    <mat-icon *ngIf="isDisableVerification(row)" class="secondary-text">assignment_turned_in</mat-icon>
+                  </button>
+                  <button type="button" mat-icon-button color="" matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="isDisableReleaseCoin(row)">
+                    <mat-icon *ngIf="!isDisableReleaseCoin(row)" class="orange-500-fg">call_made</mat-icon>
+                    <mat-icon *ngIf="isDisableReleaseCoin(row)" class="secondary-text">call_made</mat-icon>
+                  </button>
+                  <!-- <button type="button" mat-icon-button color="primary"
+                    [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
+                    (click)="deleteStp(row.id)">
+                    <mat-icon>delete</mat-icon>
+                  </button> -->
+                </div>
+              </ng-template>
+            </ngx-datatable-column>
+          </ngx-datatable>
+          <a #downloadLink></a>
+        </mat-tab>
 
-
-        <ngx-datatable-column [sortable]="false" name="Status Coin" prop="status_coin" [flexGrow]="3">
-        </ngx-datatable-column>
-
-        <ngx-datatable-column [width]="250" name="Tindakan" headerClass="textright" [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <div class="button-row" style="margin-left: -10px">
-              <button type="button" mat-icon-button color="" matTooltip="Lihat"
-                [routerLink]="['/dte', 'taskverification', 'detail', row.id, row.scheduler_templates_id]"
-                [disabled]="!permissionVerifikasiMisi?.lihat">
-                <mat-icon class="secondary-text">assignment</mat-icon>
-              </button>
-              <button type="button" mat-icon-button color=""
-                [routerLink]="['/dte', 'taskverification', 'edit', row.id]"
-                [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah" matTooltip="Ubah Tanggal Penjadwalan">
-                <mat-icon class="secondary-text">update</mat-icon>
-              </button>
-              <button type="button" mat-icon-button color="" [disabled]="row.status_scheduler !== 'publish'"
-                matTooltip="Export Misi" (click)="export(row)">
-                <mat-icon *ngIf="row.status_scheduler == 'publish'" class="orange-500-fg">save_alt</mat-icon>
-                <mat-icon *ngIf="row.status_scheduler !== 'publish'" class="secondary-text">save_alt</mat-icon>
-              </button>
-              <button type="button" mat-icon-button color="" matTooltip="Verified All" (click)="openConfirmDialog(row, 'Verification All Mission')" [disabled]="isDisableVerification(row)">
-                <mat-icon *ngIf="!isDisableVerification(row)" class="orange-500-fg">assignment_turned_in</mat-icon>
-                <mat-icon *ngIf="isDisableVerification(row)" class="secondary-text">assignment_turned_in</mat-icon>
-              </button>
-              <button type="button" mat-icon-button color="" matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="isDisableReleaseCoin(row)">
-                <mat-icon *ngIf="!isDisableReleaseCoin(row)" class="orange-500-fg">call_made</mat-icon>
-                <mat-icon *ngIf="isDisableReleaseCoin(row)" class="secondary-text">call_made</mat-icon>
-              </button>
-              <!-- <button type="button" mat-icon-button color="primary"
-                [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
-                (click)="deleteStp(row.id)">
-                <mat-icon>delete</mat-icon>
-              </button> -->
-            </div>
-          </ng-template>
-        </ngx-datatable-column>
-      </ngx-datatable>
-      <a #downloadLink></a>
+        <!-- TIPE MISI -->
+        <mat-tab label="TSM">
+          <app-task-verification-index-tsm></app-task-verification-index-tsm>
+        </mat-tab>
+      </mat-tab-group>
     </div>
   </div>
 </div>
