--- a/src/app/pages/sku-management/product/create/product-create.component.html
+++ b/src/app/pages/sku-management/product/create/product-create.component.html
@@ -181,7 +181,8 @@
                   <div class="pt-16" fxLayout="column" style="margin-left: 50px;">
                     <mat-form-field fxFlex="100" class="is-light form-primary">
                       <!-- <strong>Prioritas Produk</strong> -->
-                      <input matInput type="text" (keypress)="numberOnly($event)" placeholder="Prioritas Produk" formControlName="priority_product">
+                      <input matInput type="text" (keypress)="numberOnly($event)" placeholder="Prioritas Produk"
+                        formControlName="priority_product">
                       <!-- <mat-error
                         *ngIf="formProductGroup.controls['name'].hasError('required') && formProductGroup.controls['name'].touched">
                         Nama Produk harus diisi
@@ -321,6 +322,7 @@
                         <span fxFlex="15" class="h6 text-semibold">Harga Produk</span>
                         <span fxFlex="17" class="h6 text-semibold">Harga Produk Setelah Potongan Harga</span>
                         <span fxFlex="15" class="h6 text-semibold">Tanggal Berakhir</span>
+                        <span fxFlex="15" class="h6 text-semibold">Tipe</span>
                         <div fxFlex="5" fxLayout="column" fxLayoutAlign="center center">
                           <span class="h6 text-semibold">Hapus</span>
                         </div>
@@ -392,6 +394,14 @@
                                   <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                                 </mat-datepicker-toggle>
                                 <mat-datepicker #dp></mat-datepicker>
+                              </mat-form-field>
+                            </div>
+                            <div fxFlex="15">
+                              <mat-form-field class="is-light packaging">
+                                <mat-select formControlName="tipe">
+                                  <mat-option *ngFor="let item of listTipe" [value]="item.value">
+                                    {{item.name}}</mat-option>
+                                </mat-select>
                               </mat-form-field>
                             </div>
                             <div fxFlex="5%" fxLayout="column" fxLayoutAlign="center center">
