--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -151,7 +151,8 @@
                     <div class="pt-16" fxLayout="column" style="margin-left: 50px;">
                       <mat-form-field fxFlex="100" class="is-light form-primary">
                         <!-- <strong>Prioritas Produk</strong> -->
-                        <input matInput type="text" (keypress)="numberOnly($event)" placeholder="Prioritas Produk" formControlName="priority_product">
+                        <input matInput type="text" (keypress)="numberOnly($event)" placeholder="Prioritas Produk"
+                          formControlName="priority_product">
                         <!-- <mat-error
                           *ngIf="formProductGroup.controls['name'].hasError('required') && formProductGroup.controls['name'].touched">
                           Nama Produk harus diisi
@@ -165,8 +166,11 @@
                 </div>
                 <!-- <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src">Promo SRC</mat-checkbox> -->
                 <div fxLayout="row" fxLayoutGap="20px">
-                  <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src" [disabled]="!detailProduct.is_private_label_editable">Promo SRC</mat-checkbox>
-                  <mat-checkbox (change)="isPrivateLabel($event)" class="mt-4 ml-4 mb-8" formControlName="is_private_label" [disabled]="!detailProduct.is_private_label_editable">Produk Prinsipal</mat-checkbox>
+                  <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src"
+                    [disabled]="!detailProduct.is_private_label_editable">Promo SRC</mat-checkbox>
+                  <mat-checkbox (change)="isPrivateLabel($event)" class="mt-4 ml-4 mb-8"
+                    formControlName="is_private_label" [disabled]="!detailProduct.is_private_label_editable">Produk
+                    Prinsipal</mat-checkbox>
                 </div>
               </div>
               <div class="" formArrayName="areas"
@@ -267,9 +271,14 @@
               </div>
               <div *ngIf="formProductGroup.get('is_private_label').value">
                 <div class="wilayah" fxLayout="row" fxLayoutAlign="space-between center">
-                  <div fxFlex="50"><h3 class="">Harga Produk</h3></div>
+                  <div fxFlex="50">
+                    <h3 class="">Harga Produk</h3>
+                  </div>
                   <div class="button-row">
-                    <button mat-flat-button color="white" matTooltip="Tambah Kemasan" (click)="addProductPrice()" [disabled]="isDetail"><mat-icon>add</mat-icon></button>
+                    <button mat-flat-button color="white" matTooltip="Tambah Kemasan" (click)="addProductPrice()"
+                      [disabled]="isDetail">
+                      <mat-icon>add</mat-icon>
+                    </button>
                   </div>
                 </div>
                 <div>
@@ -282,13 +291,15 @@
                         <span fxFlex="15" class="h6 text-semibold">Harga Produk</span>
                         <span fxFlex="17" class="h6 text-semibold">Harga Produk Setelah Potongan Harga</span>
                         <span fxFlex="15" class="h6 text-semibold">Tanggal Berakhir</span>
+                        <span fxFlex="15" class="h6 text-semibold">Tipe</span>
                         <div fxFlex="5" fxLayout="column" fxLayoutAlign="center center">
                           <span class="h6 text-semibold">Hapus</span>
                         </div>
                       </div>
                     </mat-list-item>
                     <mat-divider></mat-divider>
-                    <div fxFlex="1 0 auto" formArrayName="listProdukPrivateLabel" *ngFor="let item of formProductGroup.get('listProdukPrivateLabel')['controls']; let i = index;">
+                    <div fxFlex="1 0 auto" formArrayName="listProdukPrivateLabel"
+                      *ngFor="let item of formProductGroup.get('listProdukPrivateLabel')['controls']; let i = index;">
                       <div [formGroupName]="i">
                         <mat-list-item class="custom-height mb-8">
                           <div class="pl-8" fxFlex="auto" fxLayoutAlign="space-between center" fxLayout="row">
@@ -352,6 +363,14 @@
                                   <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                                 </mat-datepicker-toggle>
                                 <mat-datepicker #dp></mat-datepicker>
+                              </mat-form-field>
+                            </div>
+                            <div fxFlex="15">
+                              <mat-form-field class="is-light packaging">
+                                <mat-select formControlName="tipe">
+                                  <mat-option *ngFor="let item of listTipe" [value]="item.value">
+                                    {{item.name}}</mat-option>
+                                </mat-select>
                               </mat-form-field>
                             </div>
                             <div fxFlex="5%" fxLayout="column" fxLayoutAlign="center center">
