--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
@@ -154,8 +154,26 @@
             </div>
           </div>
 
-          <div *ngIf="item.type == 'image'" fxLayout="column" fxLayoutAlign="start start">
+          <div class="item-question-img" *ngIf="item.type == 'image'" fxLayout="column" fxLayoutAlign="start start">
+            <img src="{{item.answer_image}}" class="p-8 answer-img" (click)="previewImage(item.answer_image)"/>
+          </div>
+
+          <div class="item-question-img" *ngIf="item.type == 'planogram'" fxLayout="column" fxLayoutAlign="start start">
+            <div class="p-12 planogram-template" fxLayout="column" fxLayoutAlign="center center">
+              <img src="{{item.planogram_image}}" class="planogram-template-img" (click)="previewImage(item.planogram_image)">
+              <span class="planogram-template-caption">Template Planogram</span>
+            </div>
             <img src="{{item.answer_image}}" class="answer-img" (click)="previewImage(item.answer_image)"/>
+          </div>
+
+          <div class="item-question-img" *ngIf="item.type == 'stock_check_ir'" fxLayout="column" fxLayoutAlign="start start">
+            <div *ngFor="let item of item.stock_check_ir_list" class="mb-16 item-question-img" fxLayout="column">
+              <div class="p-8" fxLayout="column" fxLayoutAlign="start start">
+                <div>Product: {{item.PRODUCT_NAME}}</div>
+                <div>Stok: {{item.QUANTITY}}</div>
+              </div>
+              <img src="{{item.IMAGE}}" class="answer-img" (click)="previewImage(item.IMAGE)"/>
+            </div>
           </div>
 
         </div>
