--- a/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
+++ b/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
@@ -27,6 +27,9 @@
           <mat-form-field fxFlex="50" class="is-light px-24">
             <input matInput placeholder="Apps Version" formControlName="version">
           </mat-form-field>
+          <mat-form-field fxFlex="50" class="is-light px-24">
+            <input matInput placeholder="Classification" formControlName="classification">
+          </mat-form-field>
 
           <div class="" formArrayName="wilayah" *ngFor="let wil of formFF.get('wilayah')['controls']; let i = index;">
             <div [formGroupName]="i">
